Fixed facets collapse icon states being in reverse

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -8816,7 +8816,7 @@ a:active,
   margin-right: 1em;
   width: 0;
 }
-.collapsed .icon-collapse:before {
+[aria-expanded="true"] > .icon-collapse:before {
   content: '-';
 }
 .open > a > .icon-collapse:before,
