--- a/docroot/themes/iucn_who/less/theme/general.less
+++ b/docroot/themes/iucn_who/less/theme/general.less
@@ -69,7 +69,7 @@ a {
     margin-right: 1em;
     width: 0;
   }
-  .collapsed &:before {
+  [aria-expanded="true"] > &:before {
     content: '-';
   }
   .open > a > &:before {
